switched to eslint for format enforcement

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "test": "standard"
+    "test": "eslint src"
   },
   "keywords": [
     "splatoon-3",
@@ -21,6 +21,10 @@
     "tesseract.js": "^4.1.0"
   },
   "devDependencies": {
-    "standard": "^17.1.0"
+    "eslint": "^8.42.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
